--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         </div>
         <ul>
             <li>
-              <a href="paes.html"target="_blank">Pães</a>
+              <a href="paes.html "target="_blank">Pães</a>
             </li>
             <li>
-            <a href="Bolos.HTML"target="_blank">Bolos</a>
+            <a href="bolos.HTML "target="_blank">Bolos</a>
             </li>
             <li>
-              <a href="salgados.html"target="_blank">Salgados</a>
+              <a href="salgados.html "target="_blank">Salgados</a>
             </li>
             <li>
-              <a href="cupk.html"target="_blank">Cupcakes e outros</a>
+              <a href="cupk.html "target="_blank">Cupcakes e outros</a>
             </li>
             <li>
-              <a href="https://wa.me/555496781478"target="_blank">Faça seu pedido</a>
+              <a href="https://wa.me/555496781478 "target="_blank">Faça seu pedido</a>
             </li>
          </ul>
           <div id="social-links">
