--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="paes.html "target="_blank">Pães</a>
             </li>
             <li>
-            <a href="bolos.HTML "target="_blank">Bolos</a>
+            <a href="bolos.html "target="_blank">Bolos</a>
             </li>
             <li>
               <a href="salgados.html "target="_blank">Salgados</a>
