--- a/cupk.html
+++ b/cupk.html
@@ -66,31 +66,31 @@
   <body>
     <div class="container">
       <div class="column">
-        <img src="./assets/cupk/cup1.png" alt="Cupcake de chocolate" />
+        <img src="./assets/Cupk/cup1.png" alt="Cupcake de chocolate" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/cup2.png" alt="Imagem 2" />
+        <img src="./assets/Cupk/cup2.png" alt="Imagem 2" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/cup3.png" alt="Imagem 3" />
+        <img src="./assets/Cupk/cup3.png" alt="Imagem 3" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/cup4.png" alt="Imagem 4" />
+        <img src="./assets/Cupk/cup4.png" alt="Imagem 4" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/ninho.png" alt="Imagem 5" />
+        <img src="./assets/Cupk/ninho.png" alt="Imagem 5" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/biscopito.png" alt="Imagem 6" />
+        <img src="./assets/Cupk/biscopito.png" alt="Imagem 6" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/bolopote.png" alt="Imagem 7" />
+        <img src="./assets/Cupk/bolopote.png" alt="Imagem 7" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/paodoce.png" alt="Imagem 7" />
+        <img src="./assets/Cupk/paodoce.png" alt="Imagem 7" />
       </div>
       <div class="column">
-        <img src="./assets/cupk/doce.png" alt="Imagem 7" />
+        <img src="./assets/Cupk/doce.png" alt="Imagem 7" />
       </div>
     </div>
 
