--- a/bolos.html
+++ b/bolos.html
@@ -67,42 +67,42 @@
     <div class="container">
       <div class="column">
         <img
-          src="./assets/Bolos/bolo13.png"
+          src="./assets/bolos/Bolo13.png"
           alt="Imagem com quatro bolos com cobertura"
         />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo2.png" alt="Imagem 2" />
+        <img src="./assets/bolos/Bolo2.png" alt="Imagem 2" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo3.png" alt="Imagem 3" />
+        <img src="./assets/bolos/bolo3.png" alt="Imagem 3" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo4.png" alt="Imagem 4" />
+        <img src="./assets/bolos/bolo4.png" alt="Imagem 4" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo5.png" alt="Imagem 5" />
+        <img src="./assets/bolos/bolo5.png" alt="Imagem 5" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo6.png" alt="Imagem 6" />
+        <img src="./assets/bolos/bolo6.png" alt="Imagem 6" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo7.png" alt="Imagem 7" />
+        <img src="./assets/bolos/bolo7.png" alt="Imagem 7" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo8.png" alt="Imagem 8" />
+        <img src="./assets/bolos/bolo8.png" alt="Imagem 8" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo9.png" alt="Imagem 9" />
+        <img src="./assets/bolos/bolo9.png" alt="Imagem 9" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo10.png" alt="Imagem 10" />
+        <img src="./assets/bolos/bolo10.png" alt="Imagem 10" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo11.png" alt="Imagem 11" />
+        <img src="./assets/bolos/bolo11.png" alt="Imagem 11" />
       </div>
       <div class="column">
-        <img src="./assets/Bolos/bolo12.png" alt="Imagem 13" />
+        <img src="./assets/bolos/bolo12.png" alt="Imagem 13" />
       </div>
     </div>
 
