--- a/bolos.html
+++ b/bolos.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="column">
         <img
-          src="./assets/bolos/Bolo13.png"
+          src="./assets/bolos/bolo13.png"
           alt="Imagem com quatro bolos com cobertura"
         />
       </div>
