--- a/cupk.html
+++ b/cupk.html
@@ -22,7 +22,7 @@
         justify-content: start;
       }
       .container {
-        display: flex;
+        display: 10px;
         flex-wrap: wrap;
         justify-content: center; /* Centralizar as colunas horizontalmente */
         align-items: flex-start; /* Alinhar as colunas ao topo */
