--- a/cupk.html
+++ b/cupk.html
@@ -22,11 +22,11 @@
         justify-content: start;
       }
       .container {
-        display: 10px;
+        display: flex;
         flex-wrap: wrap;
         justify-content: center; /* Centralizar as colunas horizontalmente */
         align-items: flex-start; /* Alinhar as colunas ao topo */
-        padding: 5%; /* Adicionar algum espaço entre as colunas e a borda da página */
+        padding: initial; /* Adicionar algum espaço entre as colunas e a borda da página */
       }
       .column {
         padding: 8px;
@@ -36,8 +36,8 @@
         border-radius: 150px;
       }
       img {
-        width: 230px; /* Defina a largura fixa desejada em pixels */
-        height: 235px; /* Mantém a proporção da imagem */
+        width: 326px; /* Defina a largura fixa desejada em pixels */
+        height: 326px; /* Mantém a proporção da imagem */
         display: block; /* Para centralizar verticalmente a imagem */
         margin: 0 auto;
         padding: auto;
