--- a/cupk.html
+++ b/cupk.html
@@ -13,10 +13,10 @@
 
     <style>
       body {
-        background-image: url("./assets/fundo.jpg"); /* Fundo */
-        background-size: border-box; /* Ajusta a imagem ao tamanho da janela do navegador */
-        background-repeat: repeat; /* Evita a repetição da imagem de fundo */
-        margin: 0;
+        background-image: url("./assets/fundo.jpg");
+        background-size: border-box;
+        background-repeat: repeat;
+        margin: 0; /* Removendo a margem da página */
         padding: 0;
         align-items: start;
         justify-content: start;
@@ -24,9 +24,9 @@
       .container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center; /* Centralizar as colunas horizontalmente */
-        align-items: flex-start; /* Alinhar as colunas ao topo */
-        padding: initial; /* Adicionar algum espaço entre as colunas e a borda da página */
+        justify-content: center;
+        align-items: flex-start;
+        padding: initial;
       }
       .column {
         padding: 8px;
@@ -36,9 +36,9 @@
         border-radius: 150px;
       }
       img {
-        width: 270px; /* Defina a largura fixa desejada em pixels */
-        height: 270px; /* Mantém a proporção da imagem */
-        display: block; /* Para centralizar verticalmente a imagem */
+        width: 270px;
+        height: 270px;
+        display: block;
         margin: 0 auto;
         padding: auto;
         box-sizing: border-box;
@@ -68,39 +68,14 @@
       <div class="column">
         <img src="./assets/Cupk/cup1.png" alt="Cupcake de chocolate" />
       </div>
-      <div class="column">
-        <img src="./assets/Cupk/cup2.png" alt="Imagem 2" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/cup3.png" alt="Imagem 3" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/cup4.png" alt="Imagem 4" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/ninho.png" alt="Imagem 5" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/biscopito.png" alt="Imagem 6" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/bolopote.png" alt="Imagem 7" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/paodoce.png" alt="Imagem 7" />
-      </div>
-      <div class="column">
-        <img src="./assets/Cupk/doce.png" alt="Imagem 7" />
-      </div>
+      <!-- Adicione outras colunas conforme necessário -->
     </div>
 
     <p>Cupcake por und R$4,00</p>
-    <p>Emabalagem com 2 cupcakes R$6,00</p>
-    <p>Outros doces e bolos consulte pelo whats</p>
+    <p>Embalagem com 2 cupcakes R$6,00</p>
+    <p>Outros doces e bolos consulte pelo WhatsApp</p>
     <li>
-      <a href="https://wa.me/555496781478" target="_blank"
-        >Faça seu pedido pelo whats</a
-      >
+      <a href="https://wa.me/555496781478" target="_blank">Faça seu pedido pelo WhatsApp</a>
     </li>
   </body>
 </html>
