--- a/paes.html
+++ b/paes.html
@@ -13,10 +13,16 @@
 
     <style>
       body {
-        background-image: url("./assets/fundo.jpg"); /* Fundo */
-        background-size: border-box; /* Ajusta a imagem ao tamanho da janela do navegador */
-        background-repeat: repeat; /* Evita a repetição da imagem de fundo */
-        margin: 0;
+        background-image: url("./assets/fundo.jpg
+
+      body {
+        background-image: url("./assets/fundo
+
+      body {
+        background-image: url("./assets/fundo.jpg");
+        background-size: border-box;
+        background-repeat: repeat;
+        margin: 0; /* Removendo a margem da página */
         padding: 0;
         align-items: start;
         justify-content: start;
@@ -24,9 +30,9 @@
       .container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center; /* Centralizar as colunas horizontalmente */
-        align-items: flex-start; /* Alinhar as colunas ao topo */
-        padding: 5%; /* Adicionar algum espaço entre as colunas e a borda da página */
+        justify-content: center;
+        align-items: flex-start;
+        padding: initial;
       }
       .column {
         padding: 8px;
@@ -36,9 +42,106 @@
         border-radius: 150px;
       }
       img {
-        width: 230px; /* Defina a largura fixa desejada em pixels */
-        height: 235px; /* Mantém a proporção da imagem */
-        display: block; /* Para centralizar verticalmente a imagem */
+        width: 270px;
+        height: 270px;
+        display: block;
+        margin: 0 auto;
+        padding: auto;
+        box-sizing: border-box;
+      }
+      p {
+        margin: 5px;
+        display: block;
+        text-align: center;
+        font-size: 24px;
+      }
+
+      li a {
+        margin: 10px;
+        display: block;
+        text-align: center;
+        font-size: 30px;
+      }
+      .seletor-de-classe {
+        font-family: "Inter", sans-serif;
+        font-family: "Quicks
+
+      body {
+        background-image: url("./assets/fundo.jpg");
+        background-size: border-box;
+        background-repeat: repeat;
+        margin: 0; /* Removendo a margem da página */
+        padding: 0;
+        align-items: start;
+        justify-content: start;
+      }
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        padding: initial;
+      }
+      .column {
+        padding: 8px;
+        box-sizing: border-box;
+        text-align: center;
+        position: relative;
+        border-radius: 150px;
+      }
+      img {
+        width: 270px;
+        height: 270px;
+        display: block;
+        margin: 0 auto;
+        padding: auto;
+        box-sizing: border-box;
+      }
+      p {
+        margin: 5px;
+        display: block;
+        text-align: center;
+        font-size: 24px;
+      }
+
+      li a {
+        margin: 10px;
+        display: block;
+        text-align: center;
+        font-size: 30px;
+      }
+      .seletor-de-classe {
+        font-family: "Inter", sans-serif;
+        font-family: "Quicksand", sans-serif;
+        font-family: "
+
+      body {
+        background-image: url("./assets/fundo.jpg");
+        background-size: border-box;
+        background-repeat: repeat;
+        margin: 0; /* Removendo a margem da página */
+        padding: 0;
+        align-items: start;
+        justify-content: start;
+      }
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        padding: initial;
+      }
+      .column {
+        padding: 8px;
+        box-sizing: border-box;
+        text-align: center;
+        position: relative;
+        border-radius: 150px;
+      }
+      img {
+        width: 270px;
+        height: 270px;
+        display: block;
         margin: 0 auto;
         padding: auto;
         box-sizing: border-box;
