--- a/paes.html
+++ b/paes.html
@@ -3,30 +3,19 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <title>Pães da Vovó Lili</title>
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Quicksand&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Quicksand&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <style>
       body {
-        background-image: url("./assets/fundo.jpg
-
-      body {
-        background-image: url("./assets/fundo
-
-      body {
         background-image: url("./assets/fundo.jpg");
-        background-size: border-box;
-        background-repeat: repeat;
-        margin: 0; /* Removendo a margem da página */
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 0;
         padding: 0;
         align-items: start;
         justify-content: start;
       }
+
       .container {
         display: flex;
         flex-wrap: wrap;
@@ -34,6 +23,7 @@
         align-items: flex-start;
         padding: initial;
       }
+
       .column {
         padding: 8px;
         box-sizing: border-box;
@@ -41,14 +31,14 @@
         position: relative;
         border-radius: 150px;
       }
+
       img {
-        width: 270px;
-        height: 270px;
+        max-width: 100%;
+        height: auto;
         display: block;
         margin: 0 auto;
-        padding: auto;
-        box-sizing: border-box;
       }
+
       p {
         margin: 5px;
         display: block;
@@ -62,103 +52,7 @@
         text-align: center;
         font-size: 30px;
       }
-      .seletor-de-classe {
-        font-family: "Inter", sans-serif;
-        font-family: "Quicks
 
-      body {
-        background-image: url("./assets/fundo.jpg");
-        background-size: border-box;
-        background-repeat: repeat;
-        margin: 0; /* Removendo a margem da página */
-        padding: 0;
-        align-items: start;
-        justify-content: start;
-      }
-      .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: flex-start;
-        padding: initial;
-      }
-      .column {
-        padding: 8px;
-        box-sizing: border-box;
-        text-align: center;
-        position: relative;
-        border-radius: 150px;
-      }
-      img {
-        width: 270px;
-        height: 270px;
-        display: block;
-        margin: 0 auto;
-        padding: auto;
-        box-sizing: border-box;
-      }
-      p {
-        margin: 5px;
-        display: block;
-        text-align: center;
-        font-size: 24px;
-      }
-
-      li a {
-        margin: 10px;
-        display: block;
-        text-align: center;
-        font-size: 30px;
-      }
-      .seletor-de-classe {
-        font-family: "Inter", sans-serif;
-        font-family: "Quicksand", sans-serif;
-        font-family: "
-
-      body {
-        background-image: url("./assets/fundo.jpg");
-        background-size: border-box;
-        background-repeat: repeat;
-        margin: 0; /* Removendo a margem da página */
-        padding: 0;
-        align-items: start;
-        justify-content: start;
-      }
-      .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: flex-start;
-        padding: initial;
-      }
-      .column {
-        padding: 8px;
-        box-sizing: border-box;
-        text-align: center;
-        position: relative;
-        border-radius: 150px;
-      }
-      img {
-        width: 270px;
-        height: 270px;
-        display: block;
-        margin: 0 auto;
-        padding: auto;
-        box-sizing: border-box;
-      }
-      p {
-        margin: 5px;
-        display: block;
-        text-align: center;
-        font-size: 24px;
-      }
-
-      li a {
-        margin: 10px;
-        display: block;
-        text-align: center;
-        font-size: 30px;
-      }
       .seletor-de-classe {
         font-family: "Inter", sans-serif;
         font-family: "Quicksand", sans-serif;
@@ -180,7 +74,7 @@
 
     <li>
       <a href="https://wa.me/555496781478" target="_blank"
-        >Faça seu pedido pelo whats</a
+        >Faça seu pedido pelo WhatsApp</a
       >
     </li>
   </body>
