--- a/paes.html
+++ b/paes.html
@@ -25,6 +25,7 @@
       }
 
       .column {
+        flex: 1; /* Add this property to make columns equal width */
         padding: 8px;
         box-sizing: border-box;
         text-align: center;
