--- a/paes.html
+++ b/paes.html
@@ -34,8 +34,8 @@
       }
 
       img {
-        width: 100%; /* Make images take the full width of the column */
-        height: auto;
+        width: 270px; /* Make images take the full width of the column */
+        height: 270px;
         display: block;
         border-radius: 8px; /* Match the border radius of the column */
       }
