--- a/cupk.html
+++ b/cupk.html
@@ -68,7 +68,30 @@
       <div class="column">
         <img src="./assets/Cupk/cup1.png" alt="Cupcake de chocolate" />
       </div>
-      <!-- Adicione outras colunas conforme necessário -->
+      <div class="column">
+        <img src="./assets/Cupk/cup2.png" alt="imagem 2" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/cup3.png" alt="imagem 3" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/cup4.png" alt="imagem 4" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/ninho.png" alt="imagem 5" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/biscopito.png" alt="imagem 6" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/bolopote.png" alt="imagem 7" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/paodoce.png" alt="imagem 8" />
+      </div>
+      <div class="column">
+        <img src="./assets/Cupk/doce.png" alt="imagem 9" />
+      </div>
     </div>
 
     <p>Cupcake por und R$4,00</p>
