--- a/salgados.html
+++ b/salgados.html
@@ -13,12 +13,6 @@
 
     <style>
       body {
-        background-image: url("./assets/fundo.jpg
-
-      body {
-        background-image: url("./assets/fundo
-
-      body {
         background-image: url("./assets/fundo.jpg");
         background-size: border-box;
         background-repeat: repeat;
@@ -32,7 +26,7 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: flex-start;
-        padding: initial;
+        padding: center;
       }
       .column {
         padding: 8px;
