--- a/bolos.html
+++ b/bolos.html
@@ -206,7 +206,7 @@
 
     <p>Bolo simples: R$18</p>
     <p>Bolo vulcão: R$25</p>
-    <p>Bolos de recheados, consulte o valor do Kg</p>
+    <p>Bolos recheados, consulte o valor do Kg</p>
     <li>
       <a href="https://wa.me/555496781478" target="_blank"
         >Faça seu pedido pelo whats</a
